<resources>
    <string name="app_name">TPOapp</string>
    <string name="mainScreenText">Pozdravljeni v naši aplikaciji ShareAndWatch</string>
    <string name="dodaj_napravo_text">Dodaj napravo</string>
    <string name="dodaj_streznik_text">Dodaj streznik</string>
    <string name="seznanjene_naprave_text">Seznanjene naprave</string>
    <string name="seznanjeni_strezniki_text">Seznanjeni strezniki</string>
    <string name="seznanjene_naprave_screen">SEZNANJENE_NAPRAVE_SCREEN</string>
    <string name="neki_2">NEKI 2</string>
    <string name="_1">1</string>
    <string name="neki_4">NEKI 4</string>
    <string name="edit_device_button">EDIT</string>
    <string name="add_device_button">ADD</string>
    <string name="remove_device_button">REMOVE</string>
    <string name="id_naprava_text">ID</string>
    <string name="info_naprava_text">Info</string>
    <string name="info_naprava_text_2">Info2</string>
    <string name="update_button_text">update button</string>/>
</resources>